--- a/kingyo.html
+++ b/kingyo.html
@@ -5,10 +5,12 @@
     <script src="./script.js"></script>
     <meta property="og:title" content="きんぎょの鳴き声" />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="./ogimage.jpg" />
+    <meta property="og:image" content="https://penpenpng.github.io/shindanmaker-min/ogimage.jpg" />
+    <meta property="og:url" content="https://penpenpng.github.io/shindanmaker-min/kingyo.html" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="きんぎょの鳴き声" />
-    <meta name="twitter:image" value="./ogimage.jpg" />
+    <meta name="twitter:image:src" content="https://penpenpng.github.io/shindanmaker-min/ogimage.jpg" />
+    <meta name="twitter:url" content="https://penpenpng.github.io/shindanmaker-min/kingyo.html" />
     <style>
       #result {
         margin-bottom: 10px;
