--- a/kingyo.html
+++ b/kingyo.html
@@ -4,12 +4,14 @@
     <script src="./data.js"></script>
     <script src="./script.js"></script>
     <meta property="og:title" content="きんぎょの鳴き声" />
+    <meta property="og:description" content="上手に鳴けるかな" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="https://penpenpng.github.io/shindanmaker-min/ogimage.jpg" />
     <meta property="og:url" content="https://penpenpng.github.io/shindanmaker-min/kingyo.html" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="きんぎょの鳴き声" />
-    <meta name="twitter:image:src" content="https://penpenpng.github.io/shindanmaker-min/ogimage.jpg" />
+    <meta name="twitter:description" content="上手に鳴けるかな" />
+    <meta name="twitter:image" content="https://penpenpng.github.io/shindanmaker-min/ogimage.jpg" />
     <meta name="twitter:url" content="https://penpenpng.github.io/shindanmaker-min/kingyo.html" />
     <style>
       #result {
