Disabled tweet button until gachaed

--- a/kingyo.html
+++ b/kingyo.html
@@ -35,6 +35,6 @@
     <hr />
     <div>結果:</div>
     <div id="result"></div>
-    <button id="twitter">Tweet</button>
+    <button id="twitter" disabled>Tweet</button>
   </body>
 </html>
