--- a/kingyo.html
+++ b/kingyo.html
@@ -1,29 +1,19 @@
 <html>
   <head>
     <script src="./xorshift.js"></script>
-    <script src="./data.js"></script>
+    <script src="./data/kingyo.js"></script>
     <script src="./script.js"></script>
+    <link rel="stylesheet" href="./style.css">
     <meta property="og:title" content="きんぎょの鳴き声" />
     <meta property="og:description" content="上手に鳴けるかな" />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="https://penpenpng.github.io/shindanmaker-min/ogimage.jpg" />
+    <meta property="og:image" content="https://penpenpng.github.io/shindanmaker-min/ogimage/kingyo.jpg" />
     <meta property="og:url" content="https://penpenpng.github.io/shindanmaker-min/kingyo.html" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="きんぎょの鳴き声" />
     <meta name="twitter:description" content="上手に鳴けるかな" />
-    <meta name="twitter:image" content="https://penpenpng.github.io/shindanmaker-min/ogimage.jpg" />
+    <meta name="twitter:image" content="https://penpenpng.github.io/shindanmaker-min/ogimage/kingyo.jpg" />
     <meta name="twitter:url" content="https://penpenpng.github.io/shindanmaker-min/kingyo.html" />
-    <style>
-      #result {
-        margin-bottom: 10px;
-        padding: 20px;
-        border: solid 1px;
-      }
-
-      hr {
-        margin: 20px 0;
-      }
-    </style>
   </head>
   <body>
     <h1>きんぎょの鳴き声</h1>
